@@ -38,6 +38,10 @@
 <p>2016-05-06  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/xpm.c (ReadXPMImage): Limit the number of XPM colors and
+assure array initialization.  Fixes bad behavior with a sample
+file provided by Hanno Böck on May 5, 2016 with subject &quot;Invalid
+free in ReadXPMImage&quot;.</li>
 <li>coders/pcx.c (ReadPCXImage): Limit the number of PCX image
 planes allowed.  Fixes an unreasonable memory allocation in a
 sample file provided by Hanno Böck on May 5, 2016.</li>
